adding fix for popups

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,26 @@
 /UnitTestProject1/bin/Debug
 /WpfApplication1/obj/Debug
 /WpfApplication1/bin/Debug
+*.dll
+/WpfApplication1/Castle.Core.3.3.0/lib/net35/Castle.Core.xml
+/WpfApplication1/Castle.Core.3.3.0/lib
+/WpfApplication1/Castle.Core.3.3.0
+/WpfApplication1/CUITe.VS2015.2.0.337-beta
+/WpfApplication1/Microsoft.TestApi.0.6.0.0
+/WpfApplication1/TestStack.White.0.13.3
+/WpfApplication1/WpfApplication1.nuspec
+/WpfApplication1/WpfApplication1.1.0.0.70.symbols.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.70.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.70-beta.symbols.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.70-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.42278-beta.symbols.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.42278-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.42171-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.40658-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.40053-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.39982-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.39575-beta.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.15750.symbols.nupkg
+/WpfApplication1/WpfApplication1.1.0.0.15750.nupkg
+/WpfApplication1/nuget.exe
+/.vs/WpfApplication1/v14/.suo
