--- a/WpfApplication1/packages.config
+++ b/WpfApplication1/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net40" />
-  <package id="Microsoft.TestApi" version="0.6.0.0" targetFramework="net46" />
+  <!--<package id="Microsoft.TestApi" version="0.6.0.0" targetFramework="net46" />-->
   <package id="TestStack.White" version="0.13.3" targetFramework="net40" />
 </packages>
